# durf

./: Cargo.toml  README.md  justfile
.mise/: config.toml
crates/durf-parser/: Cargo.toml
crates/durf-parser/src/: lib.rs
crates/durf-ratatui/: Cargo.toml
crates/durf-ratatui/src/: lib.rs
crates/durf_browser/: Cargo.toml
crates/durf_browser/src/: main.rs
crates/durf_engine/: Cargo.toml
crates/durf_engine/src/: lib.rs
crates/durf_parser/: Cargo.toml
crates/durf_parser/src/: ast.rs  error.rs  lib.rs  parse.rs  prelude.rs
crates/durf_parser/src/nodes/: media.rs  mod.rs  section.rs  text.rs
crates/durf_parser/src/tests/: mod.rs
crates/durf_ratatui/: Cargo.toml
crates/durf_ratatui/examples/: markdown_test.rs
crates/durf_ratatui/src/: lib.rs  prelude.rs  state.rs  style.rs  util.rs  widget.rs
crates/durf_ratatui/src/nodes/: mod.rs  section.rs  text.rs
