[workspace]
members = [
  "crates/durf_parser",
  "crates/durf_ratatui",
  "crates/durf_engine",
  "crates/durf_browser",
]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4.5", features = ["derive"] }
futures = "0.3"
ratatui = { version="0.30", features=["serde"] }
resolve-path = "0.1.0"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "time", "uuid"] }
test-log = {version = "0.2", features = ["trace"]}
tokio = { version = "1.47", features = ["sync", "rt", "rt-multi-thread", "macros", "process", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"

[workspace.package]
edition = "2024"
authors = ["hachha <hachha@hachha.dev>"]
keywords = ["web-browser"]
categories = []
repository = "https://github.com/HarrisonHall/durf"
homepage = "https://github.com/HarrisonHall/durf"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.85.0"

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = 3
overflow-checks = true
strip = true
lto = true
codegen-units = 1
