[package]
name = "durf_browser"
description = "Future durf browser."
version = "0.0.1"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
tracing-subscriber = { workspace = true }
