[package]
name = "durf_parser"
description = "Parser for the Durf AST."
version = "0.2.3"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
scraper = "0.24"
serde = { version = "1", features = ["derive", ]}

test-log = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
