[package]
name = "durf_ratatui"
description = "Ratatui widget for Durf."
version = "0.1.1"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
ratatui = { workspace = true }
test-log = { workspace = true }
tracing = { workspace = true }

durf_parser = { path = "../durf_parser", version = "0.2.2" }

[dev-dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
tracing-subscriber = { workspace = true }
