[package]
name = "durf_ratatui"
description = "Ratatui widget for Durf."
version = "0.1.2"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]

[dependencies]
ratatui = { workspace = true }
test-log = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

durf_parser = { path = "../durf_parser", version = "0.2.3" }

crossterm = { version = "0.29", optional = true }

[dev-dependencies]
color-eyre = "0.6"
crossterm = "0.29"
tracing-subscriber = { workspace = true }
